# insitu_logger

./: .gitignore  .gitmodules  Cargo.toml  README.md  flake.nix
fixtures/: sample.sql
migrations/: 20250424121548_init.sql  20250424121557_task_summary.sql
src/: frontend.rs  main.rs
src/api/: error.rs  mod.rs  people.rs  pump.rs  sample_type.rs  sensor_data.rs  serde.rs  task.rs  task_info.rs  well.rs
web/: .env.development  .env.production  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/src/: App.svelte
web/src/lib/: api-client.ts  multiple-option-selector.svelte  option-selector.svelte  shared-variables.svelte.ts  types.ts  utils.ts
web/src/lib/components/ui/table/: table-cell.svelte  table-head.svelte
web/src/lib/editor/: index.svelte
web/src/sensor-data/: csv-log-handler.ts  log-edit-menu.svelte  sensor-data.svelte  sensor-log-handler.ts  test_function.ts
web/src/task-info/: edit-menu.svelte  task-info.svelte
web/src/task-table/: data-table-actions.svelte  data-table.svelte  date-range-picker.svelte  editable-cell.svelte  sample-set-edit-menu.svelte  sample-set-editor.svelte  sample-set-labels.svelte  sample-set-utils.ts  sample-table.svelte  sampling-time-range-picker.svelte  table-columns.ts  task-table-columns.ts  task-table.svelte
web/src/task-table/sample-set-cell/: sample-set-edit-menu.svelte  sample-set-editor.svelte  sample-set-utils.ts
