[package]
name = "pocketstack"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
strip = true

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["multipart"] }
axum-server = "0.7"
insitu_log_reader = { path = "../insitu_log_reader" }
mime_guess = "2"
tokio = { version = "1.42", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
rust-embed = { version = "8.5", features = ["axum-ex"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "sqlite",
  "macros",
  "chrono",
] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
