[package]
name = "insitu_logger"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
strip = true

[dependencies]
anyhow = "1.0"
aqua_troll_log_reader = { path = "../aqua_troll_log_reader" }
axum = { version = "0.8", features = ["multipart"] }
axum-server = "0.7"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
config = "0.15"
mime_guess = "2"
open = "5"
tokio = { version = "1.42", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
rust-embed = { version = "8.5", features = ["axum-ex"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "sqlite",
  "macros",
  "chrono",
  "json",
] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
